<resources>
    <string name="app_name">Device Info</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="btn_cpu">cpu</string>
    <string name="btn_gpu">gpu</string>
    <string name="btn_misc">misc</string>
    <string name="title_activity_cpu">CPU Manager</string>
    <string name="title_activity_gpu">GPU Manager</string>
    <string name="title_activity_misc">Misc Manager</string>


    <string name="cpu_header">Cpu</string>
    <string name="max_cpu_freq">Maximum CPU frequency</string>
    <string name="min_cpu_freq">Minimum CPU frequency</string>
    <string name="cpu_gov">CPU Governor</string>
    <string name="max_cpu_freq_value">max</string>
    <string name="min_cpu_freq_value">min</string>
    <string name="cpu_cur_gov">governor</string>

    <string name="cpu_status">CPU Status</string>
    <string name="cpu_status_content">...</string>

    <string name="max_gpu_freq">Maximum GPU frequency</string>
    <string name="gpu_status">GPU Status</string>
    <string name="gpu_status_content">...</string>
    <string name="max_gpu_freq_value">max</string>

    <string name="io_scheduler">I/O Scheduler</string>
    <string name="io_scheduler_value">...</string>
    <string name="read_ahead">Read Ahead Cache Size</string>
    <string name="read_ahead_value">...</string>
    <string name="io_scheduler_status">I/O Status</string>
    <string name="io_scheduler_status_content">...</string>
</resources>
