<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout android:orientation="vertical"
        android:padding="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">
        <TextView
            android:textStyle="bold"
            android:id="@id/tv_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/max_cpu_freq" />
        <TextView
            android:id="@+id/max_cpu_freq_value"
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/max_cpu_freq_value" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true">

        <TextView
            android:textStyle="bold"
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/min_cpu_freq" />

        <TextView
            android:id="@+id/min_cpu_freq_value"
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/min_cpu_freq_value" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true">

        <TextView
            android:textStyle="bold"
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpu_gov" />

        <TextView
            android:textAppearance="?android:textAppearanceSmall"
            android:id="@+id/cpu_cur_gov"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/cpu_cur_gov" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout4"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true">

        <TextView
            android:textStyle="bold"
            android:id="@+id/cpu_status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpu_status" />

        <TextView
            android:textAppearance="?android:textAppearanceSmall"
            android:id="@+id/cpu_status_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/cpu_status_content" />
    </LinearLayout>


</RelativeLayout>