<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout android:orientation="vertical"
        android:padding="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">
        <TextView
            android:textStyle="bold"
            android:id="@id/tv_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/io_scheduler" />
        <TextView
            android:id="@+id/io_scheduler_value"
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/io_scheduler_value" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true">

        <TextView
            android:textStyle="bold"
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_ahead" />

        <TextView
            android:id="@+id/read_ahead_value"
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/read_ahead_value" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true">

        <TextView
            android:textStyle="bold"
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/io_scheduler_status" />

        <TextView
            android:textAppearance="?android:textAppearanceSmall"
            android:id="@+id/io_scheduler_status_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/io_scheduler_status_content" />
    </LinearLayout>


</RelativeLayout>